<resources>
    <!-- App name -->
    <string name="app_name" translatable="false">Still Standing</string>

    <!-- Main -->
    <string name="app_description">This app will detect a potential fall and will call your
        emergency contact. Make sure you have accepted the requested permissions in order for the
        app to be able to contact your family or friend.</string>
    <string name="placeholder_phone">Phone Number</string>
    <string name="placeholder_name">Emergency Contact</string>
    <string name="emergency_contact">Your Emergency Contact</string>
    <string name="pick_contact">Pick Contact</string>
    <string name="pick_contact_msg">It seems you haven\'t selected your emergency contact yet!</string>
    <string name="pick_contact_pos">Select now</string>
    <string name="pick_contact_neg">Later</string>
    <string name="last_incident">Last Incident</string>
    <string name="choose_number">Choose a number</string>
    <string name="main_toast_set_permission">Accept permission first</string>
    <string name="main_toast_no_number">This contact has no phone number</string>
    <string name="warning_card_title_fall">Fall Detected!</string>
    <string name="warning_card_text_seconds_left">seconds remaining until your emergency contact gets notified.</string>

    <!--Read Data -->
    <string name="collecting">Collecting Accelerometer Data…</string>
    <string name="quit">Quit</string>
    <string name="warning_card_title">Are you OK?</string>
    <string name="warning_card_text">It seems like you fell and stood up. Do you need assistance?</string>
    <string name="warning_card_action_ok">I\'m OK</string>
    <string name="warning_card_action_fall">Emergency</string>
    <string name="toast_sms_sent_to">SMS sent to %s</string>
    <string name="toast_potential_fall">It seems like you fell</string>
    <string name="toast_fall_detected">User fell and didn\'t stand up</string>
    <string name="toast_sending_sms">Sending SMS to emergency contact...</string>
    <string name="fall_detected">Fall Detected!</string>

    <!-- Settings -->
    <string name="sms_notification_summary">If set, your emergency contact will be notified via SMS
        instead of a phone call.</string>
    <string name="sms_message_body">Help me! I fell!</string>
    <string name="sms_pref_body_summary">This message will be sent with SMS to your emergency
        contact</string>
    <string name="send_sms_pref_title">Send SMS</string>
    <string name="sms_body_pref_title">SMS Message</string>
    <string name="location_pref_title">Send Location</string>
    <string name="location_pref_summary">If set, your location will also be sent to your emergency
        contact.</string>
    <string name="sms_location_text">"My location is: "</string>
    <string name="timer_title">Emergency Delay</string>
    <string name="timer_summary">After its duration (in seconds), your contact will be notified, if you haven\'t got up.</string>
    <string name="pref_sensitivity_fall_title">Fall Detection Sensitivity</string>
    <string name="pref_sensitivity_fall_summary">This determines how easy it is to detect falls. If it\'s more sensitive you might have more false positives.</string>
    <string name="pref_sensitivity_getup_title">Stand Up Detection Sensitivity</string>
    <string name="pref_sensitivity_getup_summary">This determines how easy it is to detect you standing up after a fall. If it\'s more sensitive you might miss some actual falls.</string>
    <string name="sensitivity_default">Default</string>
    <string name="sensitivity_more">More Sensitive</string>
    <string name="sensitivity_less">Less Sensitive</string>
    <string name="contact_pref_category">CONTACT OPTIONS</string>
    <string name="sensor_pref_category">SENSOR OPTIONS</string>
    <string name="fall_sensitivity_more" translatable="false">2.5</string>
    <string name="fall_sensitivity_less" translatable="false">3.5</string>
    <string name="fall_sensitivity_default" translatable="false">2.8</string>
    <string name="stand_up_sensitivity_more" translatable="false">0.8</string>
    <string name="stand_up_sensitivity_less" translatable="false">0.4</string>
    <string name="stand_up_sensitivity_default" translatable="false">0.55</string>

    <!-- Activity labels -->
    <string name="label_read_data">Fall Detection</string>
    <string name="label_preferences">Settings</string>
    <string name="label_about">About</string>
    <string name="label_history">History</string>
    <string name="label_intro">Intro</string>
    <string name="label_graph">Graph</string>

    <!-- Menu items -->
    <string name="action_about">About</string>
    <string name="action_history">History</string>
    <string name="action_feedback">Feedback</string>
    <string name="action_graph">Graph</string>
    <string name="action_settings">Settings</string>


    <!-- Shortcuts -->
    <string name="shortcut_label_short">Detection</string>
    <string name="shortcut_label_long">Start Detection</string>

    <!-- Intro-->
    <string name="intro_title_welcome">Welcome to Still Standing</string>
    <string name="intro_title_how_to">How it works</string>
    <string name="intro_title_setup">Set it up</string>
    <string name="intro_desc_welcome">This app will detect a potential fall and will call or text your
        emergency contact. Make sure you accept the requested permissions in order for the
        app to be able to contact your family or friend.</string>
    <string name="intro_desc_pocket">Have your phone on you. For example, you can put it in
        your pocket.</string>
    <string name="intro_desc_fall">In case you fall the app detects it and it takes action in
        order to help you.</string>
    <string name="intro_desc_action">After it detects a fall, the app calls your emergency contact
        or notifies them with an SMS, depending on your settings.</string>
    <string name="intro_desc_contact">In the main screen you can pick your emergency contact.</string>
    <string name="intro_desc_settings">Tap the Settings icon in the main screen to go to your
        preferences. Select if your contact will be called, or if they will get an SMS. You can
        also add your location to message.</string>

    <!-- Graph -->
    <string name="graph_title">Acceleration of the phone (m/s)</string>

    <!-- Notifications -->
    <string name="noti_channel_default">Default</string>
    <string name="noti_title">Fall Detection</string>
    <string name="noti_body">Analyzing movement data...</string>

    <string name="fall_detected_key" translatable="false">FALL_DETECTED_TOKEN</string>
    <string name="fall_deteciton_time_key" translatable="false">TIME_OF_FALL</string>

    <!-- About -->
    <string name="true_fall_detection_y">Yeap, it is Fall</string>
    <string name="true_fall_detection_n">It is not Fall yet</string>
</resources>
