<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- "Settings", should appear as action button if possible -->
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="1"
        android:icon="@drawable/ic_outline_settings_24px"
        android:title="@string/action_settings"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_history"
        android:orderInCategory="2"
        android:icon="@drawable/ic_outline_history_24px"
        android:title="@string/action_history"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_graph"
        android:orderInCategory="3"
        android:title="@string/action_graph"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_outline_bar_chart_24px"/>

    <item
        android:id="@+id/action_about"
        android:orderInCategory="4"
        android:icon="@drawable/ic_outline_info_24px"
        android:title="@string/action_about"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_feedback"
        android:orderInCategory="5"
        android:title="@string/action_feedback"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_outline_feedback_24px"/>
</menu>